<resources>

    <string name="banner_ad_unit_id">ca-app-pub-9982327151344679/9034618940</string>
    <string name="adMobTestDeviceS5">F0E0DF548AD32B9C9DF78977B9079AD2</string>
    <string name="adMobTestDeviceS7">3795279CABB4FAC75E5F23A086CC9C9F</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC-FfgHXXCD07vcmsGBGmGkrxr-xAyftY4</string>

    <string name="app_name">Smogogród</string>
    <string name="title_activity_main">Smogogród</string>

    <string name="navigation_drawer_open">Otwórz nawigator</string>
    <string name="navigation_drawer_close">Zamknij nawigator</string>

    <string name="adapter_status_percentage">%1$.0f%%</string>
    <string name="fragment_status_connection_problem_message">Problem z połączeniem. Spróbuj ponownie później.</string>
    <string name="fragment_status_add_station">Dodaj stację</string>
    <string name="fragment_status_please_refresh_list">Najpierw odśwież listę obserwowanych stacji.</string>
    <string name="fragment_status_item_pm10">Poziom PM10 względem normy:</string>
    <string name="fragment_status_item_pm25">Poziom PM2.5 względem normy:</string>
    <string name="fragment_status_item_no2">Poziom NO₂ względem normy:</string>
    <string name="fragment_status_item_so2">Poziom SO₂ względem normy:</string>
    <string name="fragment_status_item_o3">Poziom O₃ względem normy:</string>
    <string name="fragment_status_item_co">Poziom CO względem normy:</string>
    <string name="fragment_status_item_c6h6">Poziom C₆H₆ względem normy:</string>
    <string name="fragment_report_photo_memory">Pamięć urządzenia</string>
    <string name="fragment_report_photo_create">Nowe zdjęcie</string>
    <string name="fragment_report_photo_source">Wybierz źródło</string>
    <string name="fragment_report_title_new_point">Nowy punkt</string>
    <string name="fragment_report_name_on_map">Nazwa na mapie:</string>
    <string name="fragment_report_name_on_map_hint">Nazwa na mapie</string>
    <string name="fragment_report_desc_on_map">Opis na mapie:</string>
    <string name="fragment_report_desc_on_map_hint">Opis</string>
    <string name="fragment_report_location">Lokalizacja</string>
    <string name="fragment_report_city">Miejscowość:</string>
    <string name="fragment_report_city_hint">Miejscowość</string>
    <string name="fragment_report_street">Ulica:</string>
    <string name="fragment_report_street_hint">Ulica</string>
    <string name="fragment_report_street_num">Numer budynku:</string>
    <string name="fragment_report_street_num_hint">Numer</string>
    <string name="fragment_report_reporter_title">Zgłaszający (będzie ukryte)</string>
    <string name="fragment_report_reporter">Kto zgłasza:</string>
    <string name="fragment_report_reporter_hint">Imię/nick:</string>
    <string name="fragment_report_reporter_email">E-mail:</string>
    <string name="fragment_report_reporter_email_hint">E-mail</string>
    <string name="fragment_report_photo_title">Zdjęcie</string>
    <string name="fragment_report_photo_button">Zdjęcie</string>
    <string name="activity_main_drawer_title_air_state">Stan powietrza</string>
    <string name="activity_main_drawer_title_map">Mapa</string>
    <string name="activity_main_drawer_title_report">Zgłoś truciciela</string>
    <string name="activity_main_drawer_title_society">Społeczność</string>
    <string name="activity_main_drawer_title_share">Udostępnij</string>
    <string name="fragment_report_internet_problem_toast">Problem z połączeniem. Spróbuj ponownie.</string>
    <string name="fragment_report_success">Dane o punkcie wysłane na serwer!</string>
    <string name="fragment_report_fill_form_toast">Wypełnij formularz</string>
    <string name="activity_main_share_text">Aktywnie walczę ze smogiem! Pomaga mi w tym aplikacja Smogogród. https://play.google.com/store/apps/details?id=pl.kksionek.smogogrod</string>
    <string name="activity_main_sharing">Udostępnianie</string>
    <string name="fragment_report_choose_picture">Wybierz zdjęcie</string>
    <string name="nav_header_main_logo">Logo aplikacji</string>
    <string name="fragment_report_photo_taken">Zrobione zdjęcie</string>
</resources>
