<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_status"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/activity_main_drawer_title_air_state" />
        <item
            android:id="@+id/menu_item_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/activity_main_drawer_title_map" />
        <item
            android:id="@+id/menu_item_report"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/activity_main_drawer_title_report" />
    </group>

    <item android:title="@string/activity_main_drawer_title_society">
        <menu>
            <item
                android:id="@+id/menu_item_share"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/activity_main_drawer_title_share" />
        </menu>
    </item>

</menu>
