<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_new_point"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:text="@string/fragment_report_title_new_point"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_menu_send" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_new_point"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_name_on_map"/>

                <EditText
                    android:id="@+id/report_name"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_report_name_on_map_hint"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_desc_on_map"/>

                <EditText
                    android:id="@+id/report_desc"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_report_desc_on_map_hint"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_report_location"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_city"/>

                <EditText
                    android:id="@+id/report_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/fragment_report_city_hint"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_street"/>

                <EditText
                    android:id="@+id/report_street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/fragment_report_street_hint"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_street_num"/>

                <EditText
                    android:id="@+id/report_number"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_report_street_num_hint"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_span="2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_report_reporter_title"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_reporter"/>

                <EditText
                    android:id="@+id/report_reporter"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_report_reporter_hint"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_reporter_email"/>

                <EditText
                    android:id="@+id/report_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/fragment_report_reporter_email_hint"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_report_photo_title"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/report_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/fragment_report_photo_button"/>

                <ImageView
                    android:id="@+id/report_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/fragment_report_progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8c000000"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>